[tool.poetry]
name = "terraframe"
version = "0.0.1"
description = "A tiny, highly opinionated Terraform framework"
authors = ["André Lima"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "terraframe"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
pydantic-wrangler = {git = "https://github.com/theandrelima/pydantic-wrangler.git", rev = "0.1.0_dev"}


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
